--- a/zero-ui-react/src/components/Menu/index.scss
+++ b/zero-ui-react/src/components/Menu/index.scss
@@ -23,7 +23,7 @@
     &.is-disabled {
       color: $menu-item-disabled-color;
       pointer-events: none;
-      cursor: default;
+      cursor: not-allowed;
     }
 
     &:after{
