--- a/src/components/Input/index.scss
+++ b/src/components/Input/index.scss
@@ -81,7 +81,13 @@
   white-space: nowrap;
   background-color: $input-group-addon-bg;
   border: $input-border-width solid $input-group-addon-border-color;
-  border-radius: $input-border-radius;
+  border-radius: 0.25rem 0 0 0.25rem;
+  border-right: none;
+}
+
+.zero-input-group-append {
+  border-radius: 0 0.25rem 0.25rem 0;
+  border-left: none;
 }
 
 .zero-input-group-append + .btn {
