--- a/src/components/AutoComplete/index.scss
+++ b/src/components/AutoComplete/index.scss
@@ -1,7 +1,13 @@
 @import "../../styles/variables";
 @import "../../styles/mixin";
 
+.zero-auto-complete{
+  position: relative;
+}
+
 .suggestionsWrapper{
+  position: absolute;
+  z-index: 9999;
   list-style: none;
   padding: 10px 0;
   margin: 5px 0;
