--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,3 +24,9 @@
 
 // Input
 @import "../components/Input/index";
+
+// AutoComplete
+@import "../components/AutoComplete/index";
+
+// Upload
+@import "../components/Upload/index";
