--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -12,6 +12,7 @@
   text-align: center;
   vertical-align: middle;
   background-image: none;
+  margin-bottom: 10px;
   border: $btn-border-width solid transparent;
   @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $border-radius);
 
