删除无用的样式引用

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,3 +30,9 @@
 
 // Upload
 @import "../components/Upload/index";
+
+// Progress
+@import "../components/Progress/index";
+
+// Switch
+@import "../components/Switch/index";
