--- a/src/components/Upload/index.scss
+++ b/src/components/Upload/index.scss
@@ -20,6 +20,9 @@
   width: 360px;
   height: 180px;
   text-align: center;
+  svg{
+    margin-bottom: 10px;
+  }
   &:hover {
     border: 1px dashed $primary;
   }
