输入框组件添加注释与demo

--- a/src/components/Input/index.scss
+++ b/src/components/Input/index.scss
@@ -6,6 +6,10 @@
   width: 100%;
   position: relative;
 
+  & + & {
+    margin-top: 10px;
+  }
+
   .icon-wrapper {
     position: absolute;
     height: 100%;
