--- a/src/components/Dialog/index.scss
+++ b/src/components/Dialog/index.scss
@@ -46,6 +46,9 @@ $radius: 4px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    > button{
+      margin-bottom: 0;
+    }
   }
 
   &-close {
@@ -64,6 +67,14 @@ $radius: 4px;
       width: 100%;
       top: 50%;
       left: 50%;
+    }
+
+    &-hover{
+
+      &::before,
+      &::after {
+        background: $link-color;
+      }
     }
 
     &::before {
